Docker-related fixes